SFDC Automation/src/objects/Pipeline_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contr_From_NationalSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contr From NationalSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EVA__c</fullName>
        <label>EVA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Key_WO_Splits__c</fullName>
        <description>Grouping key to group related splits</description>
        <label>Group Key WO Splits</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles__c</fullName>
        <label>Number of Vehicles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Split</label>
        <referenceTo>Opportunity_Split__c</referenceTo>
        <relationshipLabel>Pipeline Details</relationshipLabel>
        <relationshipName>Pipeline_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pipeline Details</relationshipLabel>
        <relationshipName>Pipeline_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ParentAccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is stores the owner of the Parent Account of the account with which the opportunity is associated with.</description>
        <label>ParentAccountOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline_Details_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_number__c</fullName>
        <label>Product Line #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Sheet</label>
        <referenceTo>Rate_Sheet__c</referenceTo>
        <relationshipLabel>Pipeline Details</relationshipLabel>
        <relationshipName>Pipeline_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Amount__c</fullName>
        <label>Report Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_On_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report On User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Amount__c</fullName>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_percentage__c</fullName>
        <label>Split percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total Amount without Splits</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Vehicle__c</fullName>
        <label>Total Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>New/Add Business</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Change</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Term Extension</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Walk Continuation</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Lessee  Re-Assignment</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Drop Services</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Add Insurance Only</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion to Contract Change</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion to Term Extension</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Add</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Increase</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>New Location</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Change</fullName>
                <color>#EFAE73</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split person name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>extref_Pipeline_Detail_Id__c</fullName>
        <externalId>true</externalId>
        <label>extref Pipeline Detail Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pipeline Detail</label>
    <listViews>
        <fullName>All_Opportunities_with_Line_Items</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Detail__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Number_of_Vehicles__c</columns>
        <columns>Split_Amount__c</columns>
        <columns>Split_percentage__c</columns>
        <columns>User__c</columns>
        <columns>EVA__c</columns>
        <columns>Rate_Sheet__c</columns>
        <columns>Opportunity_Split__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line_number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Opportunities with Line Items</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_with_Ratesheets</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Detail__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Number_of_Vehicles__c</columns>
        <columns>Report_On_User__c</columns>
        <columns>Report_Amount__c</columns>
        <columns>Split_Amount__c</columns>
        <columns>Split_percentage__c</columns>
        <columns>User__c</columns>
        <columns>EVA__c</columns>
        <columns>Rate_Sheet__c</columns>
        <columns>Opportunity_Split__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rate_Sheet__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Opportunities with Ratesheets</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_with_Splits</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Detail__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Number_of_Vehicles__c</columns>
        <columns>Report_Amount__c</columns>
        <columns>Report_On_User__c</columns>
        <columns>Split_Amount__c</columns>
        <columns>Split_percentage__c</columns>
        <columns>User__c</columns>
        <columns>EVA__c</columns>
        <columns>Rate_Sheet__c</columns>
        <columns>Opportunity_Split__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rate_Sheet__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Product_Line_number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Opportunity_Split__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Opportunities with Splits no details</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_with_no_details</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Detail__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Number_of_Vehicles__c</columns>
        <columns>Split_Amount__c</columns>
        <columns>Split_percentage__c</columns>
        <columns>User__c</columns>
        <columns>EVA__c</columns>
        <columns>Rate_Sheet__c</columns>
        <columns>Opportunity_Split__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rate_Sheet__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Product_Line_number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Opportunity_Split__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Opportunities with no details</label>
    </listViews>
    <listViews>
        <fullName>All_Oppr_with_Splits</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Detail__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Report_On_User__c</columns>
        <columns>Report_Amount__c</columns>
        <columns>Split_Amount__c</columns>
        <columns>Split_percentage__c</columns>
        <columns>User__c</columns>
        <columns>Number_of_Vehicles__c</columns>
        <columns>Rate_Sheet__c</columns>
        <columns>Opportunity_Split__c</columns>
        <columns>Product_Line_number__c</columns>
        <columns>extref_Pipeline_Detail_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Split_percentage__c</field>
            <operation>notEqual</operation>
            <value>100</value>
        </filters>
        <label>All Oppr with Splits</label>
    </listViews>
    <listViews>
        <fullName>Filter_By_Owner</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Report_On_User__c</columns>
        <columns>Report_Amount__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Key_WO_Splits__c</field>
            <operation>contains</operation>
            <value>0066000000H4b0BAAR</value>
        </filters>
        <label>Filter By Opprtunity and owner</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Pipeline Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>